@@ -1,3 +1,9 @@
+2007-02-14  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/30473
+	* gcc.dg/pr30473.c: New test.
+	* gcc.c-torture/execute/20070201-1.c: New test.
+
 2007-02-14  Richard Guenther  <rguenther@suse.de>
 
 	Backport from mainline:
